# allem

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  release.toml
.changelogs/unreleased/: 2024-04-12T12_45_49_95758285.md
allem/: Cargo.toml  release.toml
allem-derive/: Cargo.toml
allem-derive/src/: lib.rs
allem/src/: lib.rs
allem/tests/: derive.rs
alles/: Cargo.toml
alles-derive/: Cargo.toml
alles-derive/src/: lib.rs
alles/src/: lib.rs
alles/tests/: derive.rs
scripts/: prepare_release.sh
