[package]
name = "allem-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The derive macro for the allem crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
