[package]
name = "allem"
version.workspace = true
edition.workspace = true
description = "Generate useful variants for your custom types"
license.workspace = true
repository.workspace = true

[dependencies]
allem-derive = { version = "0.1.0", path = "../allem-derive" }
itertools = "0.12.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
